feat: use link or url as image provider
* chore: update api

* fix: token after sign in

* chore: linting with checkstyle

* feat: upload image to s3

* fix: image access on s3

* chore: update api documentation

* fix: checkstyle linting

* fix: getPassword on user rest model

* chore: api and funds controller changed according to reviews
