# src/main/java/com/starteo/demo/endpoint/controller/FundController.java
@@ -1,7 +1,6 @@
 package com.starteo.demo.endpoint.controller;
 
 import com.starteo.demo.endpoint.rest.mapper.FundMapper;
-import com.starteo.demo.endpoint.rest.mapper.IdeaMapper;
 import com.starteo.demo.endpoint.rest.model.CreateFund;
 import com.starteo.demo.endpoint.rest.model.Fund;
 import com.starteo.demo.repository.model.User;
@@ -9,6 +8,7 @@ import com.starteo.demo.service.AuthService;
 import com.starteo.demo.service.FundService;
 import com.starteo.demo.service.IdeaService;
 import jakarta.servlet.http.HttpServletRequest;
+import java.util.List;
 import lombok.AllArgsConstructor;
 import org.springframework.web.bind.annotation.CrossOrigin;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -16,7 +16,6 @@ import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RestController;
-import java.util.List;
 
 @RestController
 @AllArgsConstructor
@@ -24,18 +23,21 @@ import java.util.List;
 public class FundController {
   private FundService fundService;
   private FundMapper fundMapper;
-  private IdeaMapper ideaMapper;
   private IdeaService ideaService;
   private AuthService authService;
 
-  @PutMapping("/funds/{idea_id}")
-  public List<Fund> saveFundByIdea(@PathVariable(name = "idea_id")String ideaString, HttpServletRequest request, @RequestBody CreateFund toCreate) {
+  @PutMapping("/funds")
+  public List<Fund> saveFunds(HttpServletRequest request, @RequestBody List<CreateFund> toCreate) {
     User userConnected = authService.whoami(request);
-    com.starteo.demo.repository.model.Fund created = fundService.saveFundByIdeaId(toCreate, ideaString, userConnected);
-    return List.of(fundMapper.toRest(created));
+    List<com.starteo.demo.repository.model.Fund> created =
+        fundService.saveFunds(toCreate, userConnected);
+    return created.stream().map(fundMapper::toRest).toList();
   }
-  @GetMapping("/funds/{idea_id}")
-  public List<Fund> getAllFundSOnIdea(@PathVariable("idea_id")String ideaString,HttpServletRequest request){
-    return fundService.getFundsByIdea(ideaService.getById(ideaString)).stream().map(fundMapper::toRest).toList();
+
+  @GetMapping("/ideas/{idea_id}/funds")
+  public List<Fund> getAllFundSOnIdea(@PathVariable("idea_id") String ideaString) {
+    return fundService.getFundsByIdea(ideaService.getById(ideaString)).stream()
+        .map(fundMapper::toRest)
+        .toList();
   }
 }
