# src/main/java/com/starteo/demo/endpoint/rest/model/Role.java
@@ -1,6 +1,0 @@
-package com.starteo.demo.endpoint.rest.model;
-
-public enum Role {
-  ADMIN,
-  USER
-}
